--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ use SNMP_Session "0.52";
 
 <li> The subroutines in SNMP_Session never call <b>die()</b> anymore
  if it encouters error situations.  Instead, they issue a warning and
- return <b>undef</b>.  <a href="mailto:btr@iol.unh.edu">Bradford
- T. Ritchie</a> managed to convince me that library code should never
- <b>die</b>.  Unfortunately I haven't revised <b>BER.pm</b>
- yet, so subroutines related with BER transfer syntax encoding and
- decoding may still <b>die</b>.
+ return <b>undef</b>.  <a href="mailto:btr@iol.unh.edu">Brad
+ Ritchie</a> managed to convince me that library code should never
+ <b>die</b>.  Unfortunately I haven't revised <b>BER.pm</b> yet, so
+ subroutines related with BER transfer syntax encoding and decoding
+ may still <b>die</b>.
 
 <li> The code has been cleaned up to use more of the standard
  functionality of the Perl 5 <b>Socket.pm</b> module.  That should
@@ -270,7 +270,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-Last modified: Thu Aug 21 10:22:01 MET DST 1997
+Last modified: Fri Aug 22 12:52:55 MET DST 1997
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
