--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ use SNMP_Session "0.52";
   <li> More reasonable socket initialization, by <a
  href="mailto:peters@dkrz.de">Heine Peters</a> </li>
 
+  <li> Avoid passing numeric IP addresses to <tt>inet_ntoa()</tt>, by
+  <a href="mailto:dan_needles@INS.COM">Daniel L. Needles</a> </li>
+
  </ul>
 
 </ul>
@@ -270,7 +273,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-Last modified: Fri Aug 22 12:52:55 MET DST 1997
+19971031
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
