--- a/trunk/index.html
+++ b/trunk/index.html
@@ -44,6 +44,9 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> Added <tt>test/arp</tt> which prints the NetToMedia table from a
+  remote host.
+
 <li> SNMP_Session 0.53: Avoid passing numeric IP addresses to
   <tt>inet_ntoa()</tt>, by <a href="mailto:dan_needles@INS.COM">Daniel
   L. Needles</a>
@@ -274,7 +277,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19971031
+19971114
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
