--- a/trunk/index.html
+++ b/trunk/index.html
@@ -44,6 +44,18 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> SNMP_Session 0.55: The SNMP_Session module no longer calls
+  <tt>warn</tt> when the variable
+  <tt>$SNMP_Session::suppress_warnings</tt> is set to non-zero (it is
+  zero by default).  The error message from SNMP_Session can be
+  retrieved as <tt>$SNMP_Session::errmsg</tt>.
+
+<li> SNMP_Session 0.54, BER.pm 0.51: Errors in the BER module are now
+  passed upwards by the SNMP_Session module.  Before this change, one
+  could not distinguish malformed SNMP responses from no response at
+  all.  The BER module now no longer calls die(), but returns
+  undefined values.
+
 <li> Added <tt>test/arp</tt> which prints the NetToMedia table from a
   remote host.
 
@@ -283,7 +295,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19971125
+19971203
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
