--- a/trunk/index.html
+++ b/trunk/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN//3.0">
 <HTML>
  <HEAD>
   <TITLE>SNMP support for Perl 5</TITLE>
@@ -43,6 +44,10 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 <h2> Recent Changes: </h2>
 
 <ul>
+
+<li> BER 0.52: Ignore a leading dot when encoding an OID.  This is to
+  avoid trouble when people cut&amp;paste OIDs from CMU/UCD SNMP,
+  where a leading dot is  used to mark a "fully qualified" OID.
 
 <li> SNMP_Session 0.55: The SNMP_Session module no longer calls
   <tt>warn</tt> when the variable
@@ -90,7 +95,7 @@ use SNMP_Session "0.52";
  problems depending on how you handle the output of the pretty
  printer, since those string representations of large numbers may not
  be convertible to integers using <b>atoi()</b> or similar
- functions. </sup>
+ functions.
 
 <li> The subroutines in SNMP_Session never call <b>die()</b> anymore
  if it encouters error situations.  Instead, they issue a warning and
@@ -295,7 +300,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19971203
+19980120
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
