--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <li> SNMP_Session 0.56: Fix a bug which occurs when an error should be 
   signaled while an SNMPv1_Session is being opened.  Noticed by <a
-  href="mailto:dcox@lexmark.com">Dan Cox</a>.
+  href="mailto:dcox@lexmark.com">Dan Cox</a> and <a
+  href="mailto:pakhomenko@gmd.de">Iouri Pakhomenko</a>.
 
 <li> BER 0.52: Ignore a leading dot when encoding an OID.  This is to
   avoid trouble when people cut&amp;paste OIDs from CMU/UCD SNMP,
@@ -293,7 +294,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19980129
+19980130
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
