--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <ul>
 
+<li> BER 0.56: New <tt>encode_int()</tt> subroutine contributed by <a
+	    href="mailto:mcm@unx.sas.com">Mike Mitchell</a>.  Fixes
+	  incorrect encoding in the range +-2^15-2^23 and generalized
+	  to integers of any size.
+
+<li> BER 0.55: Fix an arithmetic bug in the uptime pretty-printer.
+	  Kudos to <a href="mailto:niels@euro.net">Niels Bakker</a>
+	  for noticing this.
+
 <li> SNMP_Session 0.56: Fix a bug which occurs when an error should be 
   signaled while an SNMPv1_Session is being opened.  Noticed by <a
   href="mailto:dcox@lexmark.com">Dan Cox</a> and <a
@@ -157,6 +166,9 @@ use SNMP_Session "0.52";
 
   <li> More reasonable socket initialization, by <a
  href="mailto:peters@dkrz.de">Heine Peters</a> </li>
+
+  <li> Correct integer BER-encoding, by <a
+ href="mailto:mcm@unx.sas.com">Mike Mitchell</a> </li>
 
  </ul>
 
@@ -294,7 +306,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19980130
+19980325
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
