--- a/trunk/index.html
+++ b/trunk/index.html
@@ -34,7 +34,7 @@ Leinen</A>  &lt;<A HREF="mailto:simon@switch.ch">simon@switch.ch</A>&gt;</H3>
 
 <p> For an excellent example of the type of application this is useful
  for, see Tobias Oetiker's <a
- href="http://www.ee.ethz.ch/~oetiker/webtools/mrtg/mrtg.html">``mrtg''
+ href="http://ee-staff.ethz.ch/~oetiker/webtools/mrtg/mrtg.html">``mrtg''
  (Multi Router Traffic Grapher)</a> tool </p>
 
 <!-- <P> You can try a trivial <A				-->
@@ -420,7 +420,7 @@ sub link_down_trap ($) {
 <HR>
 <ADDRESS>
 <!-- hhmts start -->
-19980603
+19980611
 <!-- hhmts end -->
 <A HREF="http://www.switch.ch/misc/leinen/">
  Simon Leinen &lt;simon.leinen@switch.ch&gt;</A>
