--- a/trunk/index.html
+++ b/trunk/index.html
@@ -244,7 +244,7 @@ encode_oid (1, 3, 6, 1, 2, 1, 1, 1, 0)
 
 <P> will return the BER-encoded OID for the <B>sysDescr.0</B>
  (1.3.6.1.2.1.1.1.0) instance of <A
- HREF="http://ds.internic.net/rfc/rfc1213.txt">MIB-2</A>. </P>
+ HREF="ftp://ftp.isi.edu/in-notes/rfc1213.txt">MIB-2</A>. </P>
 
 <H2>Decoding the results</H2>
 
